@@ -1,3 +1,11 @@
+2011-12-29 Thu  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-devel-information-description-short): New.
+	(epackage-devel-information-buffer): Add element DESCRIPTION.
+	(epackage-field-set): Add error checking.
+	(epackage-devel-compose-package-info): Insert first line
+	description.
+
 2011-12-27 Tue  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-package-name-valid-p):
